[FIX] les items de la navbar restent centrés jusqu'au collapse
TODO: rendre le footer responsive, et rendre le menu déroulant du header (quand l'écran est petit) responsive aussi

--- a/app/Resources/css/header.css
+++ b/app/Resources/css/header.css
@@ -2,7 +2,7 @@ body {
     padding-top: 55px; /* fixed navbar */
 }
 
-@media (min-width: 768px) {
+@media (min-width: 576px) {
     .navbar-center {
         float:none;
         margin:0 auto;
